# spark-sword

./: .dockerignore  .env.production  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEPLOY_PREPRABBIT.md  DOKPLOY_DEPLOYMENT.md  PLAYGROUND_P2_IMPLEMENTATION.md  README.md  docker-compose-prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  add_all_variants.py  finish_question_variants.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/analyzers/: __init__.py  base.py  code_mapper.py  dag_builder.py  dataflow_analyzer.py  failure_detector.py  join_detector.py  shuffle_detector.py  skew_detector.py  stage_explainer.py
backend/app/api/: __init__.py  analysis.py  auth.py  expert.py  feedback.py  mythbusters.py  progress.py  scenarios.py  tutorials.py  tutorials.py.backup
backend/app/core/: auth.py  config.py
backend/app/models/: __init__.py  spark_events.py  user.py  user_progress.py
backend/app/parsers/: __init__.py  event_log_parser.py  notebook_parser.py
backend/app/scenarios/: __init__.py  dag.py
backend/app/services/: __init__.py  analysis_service.py  anti_patterns.py  code_mapper_service.py  duckdb_service.py  failure_analysis.py  fix_wizard.py  progress_storage.py  user_storage.py
backend/app/simulators/: __init__.py  aqe_simulator.py  bucketing_calculator.py  config_simulator.py  dpp_simulator.py  format_benchmark.py  shape_playground.py
backend/scripts/: add_question_variants.py
backend/tests/: __init__.py  conftest.py
backend/tests/fixtures/: README.md
(+250 files in other folders)
