[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spark-sword"
version = "0.1.0"
description = "Spark Internals Explorer - Explain, Simulate, Suggest"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Spark-Sword Team" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",
    "duckdb>=0.9.0",
    "python-multipart>=0.0.6",
    "authlib>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
